<?xml version="1.0" encoding="utf-8"?>
<!--
##########################################################################
#  Copyright notice
#
#  (c) 2015 [d] Ligo design+development - All rights reserved
#  (Details on https://github.com/animaltool)
#
#  This script belongs to the TYPO3 Flow package "DLigo.Animaltool".
#  The DLigo Animaltool project is free software; you can redistribute
#  it and/or modify it under the terms of the GNU Lesser General Public
#  License (GPL) as published by the Free Software Foundation; either
#  version 3 of the License, or  (at your option) any later version.
#
#  The GNU General Public License can be found at
#  http://www.gnu.org/copyleft/gpl.html.
#
#  This script is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  This copyright notice MUST APPEAR in all copies of the script!
##########################################################################
-->

<resources>

    <string name="app_name">Animaltool</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="sure">Are you sure?</string>
    <string name="action_settings">Settings</string>
    <string name="action_upload">Upload</string>
    <string name="pref_api_url_title">API URL</string>
    <string name="pref_api_url_sum">The URL to the Animaltool webservice</string>
    <string name="pref_distance">Maximal distance</string>
    <string name="pref_distance_sum">The maximal distance betwean catching and releasing point</string>
    <string name="error_noconnect">Cannot connect to webservice</string>
    <string name="error_noconnect_offline">Cannot connect to webservice.\nUse last data in offline mode.</string>
    <string name="error_dialog">Error</string>
    <string name="btn_add">Add</string>
    <string name="btn_release">Release</string>
    <string name="progress_locations">Load Locations…</string>
    <string name="title_activity_main">Items</string>
    <string name="title_activity_add">Add</string>
    <string name="box_id_title">ID:</string>
    <string name="gps_title">GPS:</string>
    <string name="photo_descr">Photo</string>
    <string name="species_title">Species:</string>
    <string name="bread_title">Breed:</string>
    <string name="color_title">Color:</string>
    <string name="gender_title">Gender:</string>
    <string name="gender_hint">Gender (m/w)</string>
    <string name="comment_title">Comment:</string>
    <string name="chk_private">Private</string>
    <string name="firstname_title">Firstname:</string>
    <string name="lastname_title">Lastname:</string>
    <string name="birthday_title">Birthday:</string>
    <string name="eartag_title">RFID/Eartag:</string>
    <string name="idnumber_title">ID number:</string>
    <string name="phone_title">Phone:</string>
    <string name="phone2_title">Phone (alt):</string>
    <string name="street_title">Street:</string>
    <string name="zipcity_title">Zip/City:</string>
    <string name="country_title">Country:</string>
    <string name="owbercomment_title">Comment:</string>
    <string name="region_title">Region:</string>
    <string name="name_title">Name:</string>
    <string name="added">Animal added</string>
    <string name="upload_warning">Warning! Data not compleatly uploaded</string>
    <string name="date_error">Wrong date format</string>
    <string name="gps_error">No position given. Turn on GPS!</string>
    <string name="photo_error">A photo is required!</string>
    <string name="title_activity_release">Release</string>
    <string name="title_section1">My</string>
    <string name="title_section2">All</string>
    <string name="error_noanimals">There are no Animals to release.</string>
    <string name="main_progress_animals">Get animals to release</string>
    <string name="release">Release</string>
    <string name="release_give">Hand %1$s to:</string>    
    <string name="release_release">Release %1$s</string>    
    <string name="release_distance">Your distance is to large ( %1$dm).\nThe catching point must be less than  %2$dm away.</string>
    <string name="gps_online_desc">GPS is online</string>
    <string name="adress_desc">Show owners address</string>    
    <string name="gender_f">Female</string>
    <string name="gender_m">Male</string>
    <string name="housenumber_title">House number:</string>
    <string name="spinner_prompt">-- Please select --</string>
    <string name="cnp_title">CNP:</string>
    <string name="passId_title">Dog ID/Pass Nr.:</string>
    <string name="fill_last">Fill in last owner</string>
    <string name="btn_logout">Back to login</string>
    <string name="gps_offline_desc">No GPS signal</string>
</resources>
