<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:padding="5dp" >

<!--
##########################################################################
#  Copyright notice
#
#  (c) 2015 [d] Ligo design+development - All rights reserved
#  (Details on https://github.com/animaltool)
#
#  This script belongs to the TYPO3 Flow package "DLigo.Animaltool".
#  The DLigo Animaltool project is free software; you can redistribute
#  it and/or modify it under the terms of the GNU Lesser General Public
#  License (GPL) as published by the Free Software Foundation; either
#  version 3 of the License, or  (at your option) any later version.
#
#  The GNU General Public License can be found at
#  http://www.gnu.org/copyleft/gpl.html.
#
#  This script is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  This copyright notice MUST APPEAR in all copies of the script!
##########################################################################
-->

    <ImageView
        android:id="@+id/list_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/photo_descr"
        android:src="@drawable/ic_cam" />

    <TextView
        android:id="@+id/list_appearence"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@id/list_photo" />

    <TextView
        android:id="@+id/list_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_appearence"
        android:layout_marginBottom="5dp"
        android:layout_toRightOf="@+id/list_photo"
        android:singleLine="true"
        android:textColor="@android:color/holo_blue_dark"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/list_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_label"
        android:layout_toLeftOf="@+id/list_btn_address"
        android:layout_toRightOf="@+id/list_photo"
        android:text="@string/release" />

    <ImageButton
        android:id="@+id/list_btn_address"
        style="@android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/list_button"
        android:layout_alignRight="@+id/list_label"
        android:layout_alignTop="@+id/list_button"
        android:background="@null"
        android:contentDescription="@string/adress_desc"
        android:src="@drawable/ic_address"
        android:visibility="visible" />

</RelativeLayout> 